Cread booksection  dynamically

--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
     <h1>Awesome Books</h1>
   </header>
   <main>
-    <section class=" disp-on-click">
-      <div class="obect-class" id="obect-id"></div>
+    <section class="container">
     </section>
     <section class="add-section">
       <input type="text" name="name" placeholder="Title" id="title-id"><br><br>
-      <input type="text" name="name" placeholder="Author" id=" author-id"><br><br>
-      <button class="add--btn" type="submit">Add</button>
+      <input type="text" name="name" placeholder="Author" id="author-id"><br><br>
+      <button id="btn" class="add--btn" type="button">Add</button>
     </section>
   </main>
-
-  
-  
+  <script src="script.js"></script>
 </body>
 </html>
