Styling for awesome book

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section class="container">
     </section>
     <section class="add-section">
+      <h2>Add a new book</h2>
       <input type="text" name="name" placeholder="Title" id="title-id"><br><br>
       <input type="text" name="name" placeholder="Author" id="author-id"><br><br>
       <button id="btn" class="add--btn" type="button">Add</button>
