add contact and footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
   </header>
-  
+
   <main>
     <section class="container">
     </section>
@@ -35,6 +35,26 @@
       <button id="btn" class="add--btn" type="button">Add</button>
     </section>
   </main>
+
+  <div class="contact-section hidden" id="contacts">
+    <h3>Contact Information</h3>
+    <!-- <h2>Contact Information</h2> -->
+    <p>
+      Do you have any questions or you just want to say "Hello"? <br />
+        You can reach out to us!
+    </p>
+    <ul class="contact-info-list">
+      <li>Our e-mail: mail-test@gmail.com</li>
+      <li>Our phone number: 005568748998</li>
+      <li>our address: Streetname 33, 100015 City, Country</li>
+    </ul>
+  </div>
+
+  <footer>
+    <div class="footer">
+      <p>Copyright ...</p>
+    </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
