--- a/index.html
+++ b/index.html
@@ -13,48 +13,53 @@
     <nav class="nav-links">
       <ul>
         <li class="line dots">
-          <a href="#" id="list-link">List</a>
+          <a href="index.html" id="list-link">List</a>
         </li>
         <li class="line dots">
-          <a href="#" class="a-link" id="addlink">Add New</a>
+          <a href="#add" class="a-link" id="addlink">Add New</a>
         </li>
         <li class="dots">
-          <a href="#" class="a-link" id="contact-link">Contact</a>
+          <a href="#contacts" class="a-link" id="contact-link">Contact</a>
         </li>
       </ul>
     </nav>
+    <div class="time-div">
+      <p id="timer-p">topaz</p>
+    </div>
   </header>
 
   <main>
-    <section class="container">
+    <div id="list-title">
+      <h4>All Awesome books</h4>
+    </div>
+    <section class="container" id="list">
     </section>
-    <section class="add-section">
+    <section class="add-section" id="add">
       <h2>Add a new book</h2>
       <input type="text" name="name" placeholder="Title" id="title-id"><br><br>
       <input type="text" name="name" placeholder="Author" id="author-id"><br><br>
+      <p id="message"><p>
       <button id="btn" class="add--btn" type="button">Add</button>
     </section>
+    <div class="contact-section hidden" id="contacts">
+      <h3>Contact Information</h3>
+      <p>
+        Do you have any questions or you just want to say "Hello"? <br />
+          You can reach out to us!
+      </p>
+      <ul class="contact-info-list">
+        <li>Our e-mail: dev.oybek&jos@gmail.com</li>
+        <li>Our phone number: 005568748998</li>
+        <li>our address: Gisozi 33, Kigali City, Rwanda</li>
+      </ul>
+    </div>
   </main>
-
-  <div class="contact-section hidden" id="contacts">
-    <h3>Contact Information</h3>
-    <!-- <h2>Contact Information</h2> -->
-    <p>
-      Do you have any questions or you just want to say "Hello"? <br />
-        You can reach out to us!
-    </p>
-    <ul class="contact-info-list">
-      <li>Our e-mail: mail-test@gmail.com</li>
-      <li>Our phone number: 005568748998</li>
-      <li>our address: Streetname 33, 100015 City, Country</li>
-    </ul>
-  </div>
-
   <footer>
     <div class="footer">
       <p>Copyright ...</p>
     </div>
-  </footer>
+  </footer>  
   <script src="script.js"></script>
+  <script src="navbar.js"></script>
 </body>
 </html>
