clear clock tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
     <div class="time-div">
-      <p id="timer-p">topaz</p>
+      <p id="timer-p"></p>
     </div>
   </header>
 
