--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome books</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
   <header class="top-header">
@@ -59,7 +59,7 @@
       <p>Copyright ...</p>
     </div>
   </footer>  
-  <script src="script.js"></script>
-  <script src="navbar.js"></script>
+  <script src="JS/navbar.js"></script>
+  <script src="JS/script.js"></script>
 </body>
 </html>
